Fixing text overflow on header(fixse #1839)

--- a/src/app/resources/view-resources/resources-view.scss
+++ b/src/app/resources/view-resources/resources-view.scss
@@ -37,13 +37,9 @@
     }
   }
 
-  .title {
-    white-space: nowrap;
-    height: 22px;
-    width: 700px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font: 20px/22px Arial;
+  button{
+    padding: 2px;
+    width: 20%;
   }
 
 }
